# argems-rust-starter

./: .gitignore  Cargo.toml  README.md  env.json  release.json  release.py
frontend/: index.html  main.js  script.js
frontend/elm-stuff/0.19.1/: Main.elmi  Main.elmo
frontend/src/: Main.elm
migrations/2021-01-03-051127_create_todos/: up.sql
src/: handler.rs  main.rs  model.rs  schema.rs
