[package]
name = "argems-rust-starter"
version = "0.1.0"
authors = ["vmasdani <valianmasdani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
diesel = { version = "1.4.4", features = ["sqlite", "chrono", "r2d2"] }
actix-cors = "0.5.4"
chrono = { version = "0.4.19", features = [ "serde" ] }
serde = "1.0.118"
serde_json = "1.0.61"
diesel_migrations = "1.4.0"
actix-files = "0.5.0"
libsqlite3-sys = { version = "0.9.1", features = ["bundled"] }
